Bug 1632137 - Do not require GL compat profile for Webrender, r=jgilbert

This mirrors GLX behaviour.

Differential Revision: https://phabricator.services.mozilla.com/D71993